# seabass

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh
examples/: CMakeLists.txt
examples/1.hello_world/: CMakeLists.txt  main.cc
examples/1.hello_world/data/: trajectory.txt
examples/2.screen_record/: CMakeLists.txt  main.cc
examples/3.image_visualization/: CMakeLists.txt  main.cc
examples/4.hello_world_2d/: CMakeLists.txt  main.cc
include/seabass/: camera.h  context.h  opengl_loader.h  program.h  recorder.h  seabass.h  uniforms.h  vertex_array.h
include/seabass/base/: camera.h  context.h  opengl_loader.h  program.h  recorder.h  uniforms.h  vertex_array.h  vertex_buffer.h  window.h
include/seabass/imgui/: image.h
include/seabass/loader/: icl_trajectory.h
include/seabass/widgets/: base.h  camera.h  camera_trajectory.h  circle.h  coordinate.h  cube.h  ellipse.h  grid.h  keyframes.h  pointcloud.h  widgets.h
seabass/: CMakeLists.txt
seabass/include/seabass/: camera.h  context.h  recorder.h  seabass.h  themes.h  vertex_buffer.h  window.h
seabass/include/seabass/imgui/: image.h
seabass/include/seabass/loader/: icl_trajectory.h  trajectory.h  tum_trajectory.h
seabass/include/seabass/widgets/: camera.h  camera_trajectory.h  coordinate.h  grid.h  keyframes.h  pointcloud.h  widgets.h
